k8s/deployments/apps/nginx-hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
spec:
  selector:
    app: nginx-hello
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
